# pade

./: .dockerignore  .gitignore  CHANGELOG  LICENSE  MIGRACAO_GUIA.md  MIGRATION_GUIDE.md  Messages.py  README.md  agent.py  agent_1.py  aid.py  docker-compose-dev.yml  docker-compose.yml  filters.py  gui.py  messages.py  protocols.py  pyproject.toml  script.py  script_2.py  script_2_revisado.py  script_3.py  script_4.py  script_5.py  server_v1.py  setup.py  utils.py
docker/: Dockerfile
docker/dev/: Dockerfile
docker/prod/: Dockerfile
docs/: Makefile  api.rst  conf.py  flaskstyle.sty  index.rst
docs/_templates/: sidebarintro.html  sidebarlogo.html
docs/img/: seq_diag_contract.diag  seq_diag_request.diag  seq_diag_subscribe.diag
docs/user/: agentes-temporais.rst  desenvolvedores.rst  enviando-mensagens.rst  enviando-objetos.rst  hello-world.rst  index.html  instalacao.rst  interface-grafica.rst  meu-primeiro-agente.rst  pade-cli.rst  (+4 more)
examples/: Agent_example_neo4j  Pipfile  README.md  agent_example_1.py  agent_example_2.py  agent_example_3.py  agent_example_4.py  agent_example_5.py  agent_example_6.py  agente_teste_1.py  agente_teste_1_mosaik.py  agente_teste_2.py  agente_teste_3.py  agente_teste_4.py  agente_teste_5.py  agente_teste_6.py  database.db  pade_config.json  script_6.py  script_7.py  start_ams.py  teste.py
new-examples/: BlockerAgent.py  Contacts.py  HelloWorldAgent.py  MessageAgents.py  PeriodicMessageAgent.py  PeriodicMessageAgents.py  PingPongAgent.py  SequentialAgent.py  Supermarket.py  TicTacAgent.py
pade/: __init__.py  database.db
(+274 files in other folders)
